sec config test